# Car-Image-Classification-using-CNN

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  QUICKSTART.md  README.md  backend.dockerfile  client_bento.py  docker-compose.yml  frontend.dockerfile  frontend.py  main.py  pyproject.toml  raw.dvc  requirements.txt  requirements_frontend.txt  service.py  tasks.py  test
.dvc/: config
.github/workflows/: api-tests.yml  data_change.yaml  gcs-sync.yaml  model_change.yaml  tests.yaml
Car-Image-Classification-using-CNN/: tasks.py
Car-Image-Classification-using-CNN/.devcontainer/: devcontainer.json
Car-Image-Classification-using-CNN/dockerfiles/: api.dockerfile
configs/: config.yaml
configs/data/: default.yaml
configs/experiment/: customcnn.yaml  resnet_pretrained.yaml  resnet_scratch.yaml
configs/model/: custom.yaml  resnet.yaml
configs/training/: default.yaml
dockerfiles/: api.dockerfile  evaluate.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: best_model.pth.dvc
outputs/2026-01-15/15-24-57/.hydra/: config.yaml  hydra.yaml
reports/: README.md
scripts/: batch_test.py  export_onnx.py  manual_api_client.py  test_api_client.py
src/: main.py
src/car_image_classification_using_cnn/: data.py  data_transform.py  drift_detection.py  evaluate.py  logger.py  model.py  train.py  train_hydra.py
tests/: __init__.py  test_data.py  test_data_transform.py  test_drift_detection.py  test_evaluate.py  test_logger.py  test_model.py  test_train_hydra.py  test_training.py
tests/integrationtests/: conftest.py  test_apis.py
